updated the css file

--- a/Drum.kit.css
+++ b/Drum.kit.css
@@ -40,9 +40,4 @@ kbd{
 }
 h2 {
    text-align: center;
-color:black;
-<<<<<<< HEAD
-}
-=======
-}
->>>>>>> 9d56e812f74015c5ff3a9625bfc10ea09e9ca9c4
+color:black; }
