--- a/Drum.kit.css
+++ b/Drum.kit.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gold;
+    background-color: purple;
     color: rgba(11, 59, 163, 0.788);
 
 }
@@ -35,7 +35,7 @@ kbd{
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color:#ffc600;
+    color:red;
 
 }
 h2 {
